New in v0.6.20 (2012/??/??)
---------------------------
Enhancements:
- Merged in lp:~ed.so/duplicity/duplicity.helpfix
  + fix rare 'TypeError: encode() argument 1 must be string, not None'
  + http://lists.nongnu.org/archive/html/duplicity-talk/2012-09/msg00016.html
- Merged in lp:~ed.so/duplicity/duplicity.tmpspacefix
  + use tempfile.TemporaryFile() so unused temp files are deleted automagically
  + propbably solve bug 'Out of space error while restoring a file'
  + https://bugs.launchpad.net/duplicity/+bug/1005901
  + http://lists.gnu.org/archive/html/duplicity-talk/2012-09/msg00000.html
- Merged in lp:~mterry/duplicity/utf8-po
  + For some crazy reason, the gettext module defaults to giving you strings in
    whatever charset the po file happened to define.  Which means you never know
    what string of bytes you're going to get.  This module makes sure we always
    get utf-8 byte strings.  So we're at least predictable and reduces one
    source of UnicodeDecodeErrors (like in bug 989496)
- Merged in lp:~mterry/duplicity/1031277
  + ssh: actually delete all the requested files, not just the first one
- Merged in lp:~mterry/duplicity/leftover-sigtar
  + So currently, duplicity does not delete signature files when doing a
    remove-all-but-n operation. Seems wrong, since those signature files are now
    useless and take up space.
  + This branch does several things:
    1) Make remove-all-but-n operate on chains. In practice it did before, since
       the sets it operated on always came from complete chains (i.e. it never
       used only some of the sets from a chain)
    2) Add a new method to get all signature chains before a certain time.
    3) Use this new method to also delete signature chains during remove-all-but
       operations.
  + And it cleans up the cleanuptest.py file:
    1) Removes crufty, unused code
    2) Disallows changing the destination folder for the test, which no one
       would ever want to do and isn't really supported anyway